# CC_OpenCl_Enterprise

./: CMakeLists.txt  README.md
CL/: cl.h  cl_d3d10.h  cl_d3d11.h  cl_dx9_media_sharing.h  cl_dx9_media_sharing_intel.h  cl_egl.h  cl_ext.h  cl_ext_intel.h  cl_function_types.h  cl_gl.h  cl_gl_ext.h  cl_half.h  cl_icd.h  cl_layer.h  cl_platform.h  cl_va_api_media_sharing_intel.h  cl_version.h  opencl.h
docs/: AGENT_USAGE_GUIDE.md  AI_AGENT_CONTRACTS.md  API_REFERENCE.md  CC_OPENCL_AGENT_READY_ENTERPRISE_MANUAL.md  CC_OpenCl_AgentReady_Enterprise_Documentation.docx  CC_OpenCl_Enterprise_Dokumentation.docx  DRIVER_MANIFEST.json  ENTERPRISE_ALGORITHM_PACK.md  ERROR_HANDLING.md  FUNCTION_SELECTION_MATRIX.md  INDEX.md  KERNEL_INVENTORY.md  PARAMETER_SAFETY.md  PIPELINE_RECIPES.md  README.md  VRAM_BUDGETING.md
include/: SymBio_Interface.h
scripts/: build_windows_msvc_amd_direct.bat
src/: CC_OpenCL.c
